--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import WhatsAppButton from '../components/WhatsAppButton.astro';
 import Footer from '../components/Footer.astro';
 ---
 
-<Layout title="Rent a Car Vilcas Hmns Gaitán | Alquiler de Vehículos">
+<Layout title="GAIVANS KAMACHO EIRL | Alquiler de Vehículos">
   <Navbar />
   <main>
     <Hero />
