--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,19 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Navbar from '../components/Navbar.astro';
-import Hero from '../components/Hero.astro';
-import AboutSection from '../components/AboutSection.astro';
-import FleetSection from '../components/FleetSection.astro';
-import ContactSection from '../components/ContactSection.astro';
-import WhatsAppButton from '../components/WhatsAppButton.astro';
-import Footer from '../components/Footer.astro';
+import Layout from "../layouts/Layout.astro";
+import Navbar from "../components/Navbar.astro";
+import Hero from "../components/Hero.astro";
+import AboutSection from "../components/AboutSection.astro";
+import FleetSection from "../components/FleetSection.astro";
+import ContactSection from "../components/ContactSection.astro";
+import WhatsAppButton from "../components/WhatsAppButton.astro";
+import Footer from "../components/Footer.astro";
+import siteData from "../data/site-data.json";
 ---
 
-<Layout title="GAIVANS KAMACHO EIRL | Alquiler de Vehículos">
+<Layout
+  title="GAIVANS KAMACHO EIRL | Alquiler de Vehículos en Juliaca y Puno"
+  image={siteData.empresa.seo.ogImage}
+>
   <Navbar />
   <main>
     <Hero />
