--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Navbar from "../components/Navbar.astro";
 import Hero from "../components/Hero.astro";
 import AboutSection from "../components/AboutSection.astro";
 import FleetSection from "../components/FleetSection.astro";
+import ServiceAreasSection from "../components/ServiceAreasSection.astro";
+import FAQSection from "../components/FAQSection.astro";
 import ContactSection from "../components/ContactSection.astro";
 import WhatsAppButton from "../components/WhatsAppButton.astro";
 import Footer from "../components/Footer.astro";
@@ -11,7 +13,8 @@ import siteData from "../data/site-data.json";
 ---
 
 <Layout
-  title="GAIVANS KAMACHO EIRL | Alquiler de Vehículos en Juliaca y Puno"
+  title="Alquiler de Camionetas en Juliaca | Precios Competitivos | GAIVANS KAMACHO EIRL"
+  description="Alquiler de camionetas 4x4 Toyota Hilux y Fortuner en Juliaca y Puno. Servicio para minería, construcción y turismo. Vehículos nuevos, seguros y precios competitivos. ☎ +51 995010281"
   image={siteData.empresa.seo.ogImage}
 >
   <Navbar />
@@ -19,6 +22,8 @@ import siteData from "../data/site-data.json";
     <Hero />
     <AboutSection />
     <FleetSection />
+    <ServiceAreasSection />
+    <FAQSection />
     <ContactSection />
   </main>
   <Footer />
